[workspace]
members = [
  "_01_02_why_async",
  "_01_04_async_await_primer",
  "_02_02_future_trait",
  "_02_03_timer",
  "_02_04_executor",
  "_03_01_async_await",
  "_05_01_streams",
#   "05_02_iteration_and_concurrency",
#   "06_02_join",
#   "06_03_select",
#   "07_05_recursion",
#   "09_01_sync_tcp_server",
#   "09_02_async_tcp_server",
#   "09_03_slow_request",
#   "09_04_concurrent_tcp_server",
#   "09_05_final_tcp_server",
]